--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional",
+      "@commitlint/format"
+    ]
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
@@ -20,6 +26,8 @@
     "nocache": "^3.0.4"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/format": "^19.5.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
